# Accelerator-AgentGuard

./: .env  1-run-demo.sh  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE-MIT  README.md  _clean.sh  filevars.py  pyproject.toml
ag-end-to-end/: README.md  _clean.sh  _stop-all.sh  db-vars.sh  demo-vars.sh  install-dependencies.sh  start-demo.sh
ag-end-to-end/conjur-admin/: 1-config-jwt-authn.sh  2-create-secrets.sh  3-load-app-policy.sh  ccloud-cli.sh  coss-cli.sh
ag-end-to-end/conjur-admin/templates/: app-authn-grant.yml.template  app-authn-jwt.yml.template  app-secrets-grant.yml.template  authn-jwt.yml.template  secrets-create.yml.template
ag-end-to-end/mcp-server/: _stop-mcp-server.sh  mcp-mysql.py  pyproject.toml  start-mcp-server.sh
ag-end-to-end/mcp-server/agent_guard_core/credentials/: __init__.py  conjur_secrets_provider.py
ag-end-to-end/mysql-admin/: init_mysql.sh
ag-end-to-end/ollama-agent/: 0-setup.sh  1-run-ollama.sh  mcphost-mcp.json
