[project]
name = "accelerator-agentguard"
version = "0.1.0"
description = "Agent Guard demos"
authors = [
    {name = "jody.hunt@cyberark.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3 (>=1.40.30,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.5,<3.0.0)",
    "google-cloud-secret-manager (>=2.24.0,<3.0.0)"
]
